<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="TAnalogConversion" Id="{d67389dc-2e98-4895-8b46-fbb40c8667e8}">
    <Declaration><![CDATA[TYPE TAnalogConversion :
STRUCT
	TransducerLoLevel : UINT;
	TransducerHiLevel : UINT;
	ScaledValLoLevel : REAL;
	ScaledValHiLevel : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>